Update method clearScreen