@@ -4,9 +4,13 @@ import java.io.IOException;
 
 public class ConsoleUtil{
 
-		public static void clearScreen(){
+    public static void clearScreen(){
         try {
-            new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            if (System.getProperty("os.name").contains("Windows")) {
+            	new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+            } else {
+            	Runtime.getRuntime().exec("clear");
+            }
         } catch (InterruptedException | IOException e) {
             e.printStackTrace();
         }
